docs: add JavaDoc to JSON-DTO converters